k8s/01_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api-test
    environment: test
  name: svc-api
spec:
  ports:
  - name: api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: api-test
    environment: test
  type: ClusterIP
